Build the key url without the deprecated URL constructor
The URL(String) constructor is deprecated from Java 20, and pipeline-java
compiles this source into its 51Did module with -Xlint:all and -Werror,
excluding only Endpoints and PublicKeyFetch, so the new transport would
have failed that build on the Java 21 leg of its matrix.

URI then toURL replaces it. URI.toURL has been present since 1.0, so the
Java 8 floor is unaffected. A url that will not parse now raises
URISyntaxException rather than MalformedURLException, so the catch takes
both and a bad url is still reported as the key being unavailable with
the same status as before.